# embedded_scratchpad

./: .gitignore  README.md
arduino_lcd1602_74hc595/: README.md  arduino_lcd1602_74hc595.ino
arduino_mpu6050_gy271/: GY271.ino  I2C_Bus.ino  MPU6050.ino  README.md  arduino_mpu6050_gy271.ino
arduino_st7789/: CMakeLists.txt  README.md  arduino_st7789.ino  bit_reader.cpp  bit_reader.hpp  font.cpp  font.hpp  tft.cpp  tft.hpp  utility.hpp
arduino_st7789/test/: .gitignore  CMakeLists.txt  README.md  main.cpp  test_cobs.cpp  tft.cpp
arduino_st7789/test/images/: workspace.pdn
arduino_st7789/test/scripts/: .gitignore  bit_pusher.py  command_creator.py  devices.py  frame.py  image_compression.py  process_server.py  quantize_images.py  render_all_glyphs.sh  render_glyphs.py  requirements.txt  response_parser.py  serial_server.py  server.py  wmo_weather_codes.py
arduino_st7789/test/scripts/glyphs/: glyph.hpp
arduino_st7789/test/scripts/icons/: README.md
arduino_st7789/test/scripts/static/: AppView.vue  ControlsView.vue  FrameView.vue  index.css  index.html
arduino_st7789/test/src/: Arduino.hpp  app.hpp  bit_reader.hpp  cobs.hpp  colour_functions.hpp  commands.hpp  font.cpp  font.hpp  gfx.cpp  gfx.hpp  glyph.hpp  main.cpp  moon_phases.hpp  pgmspace.h  printers.hpp  response.hpp  rgb565.hpp  serial.hpp  sketch.hpp  st7789.cpp  st7789.hpp  test_cobs.cpp  tft.cpp  tft.hpp  utility.hpp
arduino_st7789/test/src/app/: app.hpp  commands.hpp  response.hpp  weather_icons.hpp  wind_speeds.hpp
arduino_st7789/test/src/graphics/: glyph.hpp
arduino_st7789/test/src/hardware/: st7789.hpp
arduino_st7789/test/src/utility/: bit_reader.hpp  pipe.hpp  printers.hpp
arduino_st7789_adafruit_demo/: arduino_st7789_adafruit_demo.ino
esp32_rust_embassy/: Cargo.toml  README.md
esp32_rust_embassy/.cargo/: config.toml
esp32_rust_embassy/scripts/: install_esp.sh
esp32_rust_embassy/src/: .gitignore  ble_scanner.rs  lib.rs  main.rs  web_server.rs
jupyter_delta_sigma_oscillator/: delta_sigma_transfer_functions.ipynb  pll_calculations.ipynb  virtual_ground_impedance.ipynb
jupyter_quartz_crystal/: Quarts Crystal.ipynb
kicad_delta_sigma_demodulator/: .gitignore  README.md  delta_sigma_demodulator.kicad_pcb  delta_sigma_demodulator.kicad_pro  delta_sigma_demodulator.kicad_sch
kicad_delta_sigma_modulator/: README.md  delta_sigma_modulator.kicad_pcb  delta_sigma_modulator.kicad_pro  delta_sigma_modulator.kicad_sch
kicad_gilbert_cell_module/: gilbert_cell_module.kicad_pro  gilbert_cell_module.kicad_sch
kicad_pll_op_amp_vco/: README.md  custom_symbols.kicad_sym  pll_op_amp_vco.kicad_pcb  pll_op_amp_vco.kicad_pro  pll_op_amp_vco.kicad_sch
ltspice_circuits/: 100MHz_gilbert_cell.asc  10MHz_gain_controlled_oscillator.asc  10MHz_gilbert_cell.asc  16MHz_quadrature_phase_splitter.asc  1MHz_oscillator.asc  bjt_amplifier.asc  bjt_emitter_follower.asc  black_regulator.asc  (+16 more)
(+53 files in other folders)
