[package]
edition      = "2024"
name         = "esp32-d0wd-v3"
rust-version = "1.88"
version      = "0.1.0"

[dependencies]
log = { version = "0.4.27" }
critical-section = { version = "1.2.0" }
static_cell = { version = "2.1.1" }
heapless = { version = "0.9.3" }
# embedded
embedded-io = { version = "0.7.1" }
embedded-io-async = { version = "0.7.0" }
# embassy
embassy-executor = { version = "0.10.0", features = ["log"] }
embassy-futures = { version = "0.1.2", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
embassy-net = { version = "0.9.1", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
] }
# esp32
esp-hal = { version = "1.1.1", features = [
  "esp32",
  "log-04",
  "unstable",
] }
esp-rtos = { version = "0.3.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32",
  "log-04",
] }
esp-alloc = { version = "0.10.0" }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32", "log-04"] }
esp-backtrace = { version = "0.19.0", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.17.0", features = ["esp32", "log-04"] }
esp-radio = { version = "0.18.0", features = [
  "ble",
  "coex",
  "esp-alloc",
  "esp32",
  "log-04",
  "unstable",
  "wifi",
] }
# embassy bluetooth stack
bt-hci = { version = "0.8.1" }
trouble-host = { version = "0.6.0", features = [
  "default-packet-pool-mtu-255",
  "derive",
  "gatt",
  "scan",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
smoltcp = { version = "0.13.1", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2 # prefer slower builds but better debugging experience
lto = "fat"
opt-level = "s"
